manifests/03-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: hse-llm-project
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.hse-llm.internal"
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-public
      protocol: HTTP
      port: 80
      hostname: "*.hse-llm-project-2026.ru"
      allowedRoutes:
        namespaces:
          from: Same
